// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Code empty 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-gnvid8=""
  >
    before|
    |after
  </p>
</div>
`;

exports[`Storyshots Code ends single line 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-gnvid8=""
  >
    This is where we see 
    <code
      data-css-hvsxkc=""
    >
      inline code
    </code>
  </p>
</div>
`;

exports[`Storyshots Code lead single line 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-gnvid8=""
  >
    <code
      data-css-hvsxkc=""
    >
      inline code
    </code>
     that is here
  </p>
</div>
`;

exports[`Storyshots Code line wrap 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-gnvid8=""
  >
    text at the start
    <code
      data-css-hvsxkc=""
    >
      buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power
    </code>
    text on the end
  </p>
</div>
`;

exports[`Storyshots Code maintains whitespace 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <code
    data-css-hvsxkc=""
  >
     in the middle 
  </code>
</div>
`;

exports[`Storyshots Code middle of paragraph 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-gnvid8=""
  >
    Please advise soonest streamline data-point, and execute , price point. This is not the hill i want to die on going forward. Diversify kpis not the long pole in my tent. Synergize productive mindfulness can you send me an invite? nor high-level so back of the net vertical integration. Deliverables 
    <code
      data-css-hvsxkc=""
    >
      inline code
    </code>
     granularity minimize backwards overflow. Baseline locked and loaded, and locked and loaded. Get buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power bake it in but take five, punch the tree, and come back in here with a clear head.
  </p>
</div>
`;

exports[`Storyshots Code standalone 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <code
    data-css-hvsxkc=""
  >
    inline code
  </code>
</div>
`;

exports[`Storyshots Heading className override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h2
    className="css-mbiza7"
    data-css-pk5y9y=""
  >
    orange
  </h2>
</div>
`;

exports[`Storyshots Heading color: primary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-pk5y9y=""
  >
    Primary
  </h1>
</div>
`;

exports[`Storyshots Heading color: secondary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-vs582v=""
  >
    Secondary
  </h1>
</div>
`;

exports[`Storyshots Heading size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-pk5y9y=""
  >
    large
  </h1>
</div>
`;

exports[`Storyshots Heading size: medium 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-obtfp0=""
  >
    medium
  </h1>
</div>
`;

exports[`Storyshots Heading size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-13brefv=""
  >
    small
  </h1>
</div>
`;

exports[`Storyshots Heading size: xLarge 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-unqwjh=""
  >
    xLarge
  </h1>
</div>
`;

exports[`Storyshots Heading size: xSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-1mnwc22=""
  >
    xSmall
  </h1>
</div>
`;

exports[`Storyshots Heading size: xXSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-1cdeypc=""
  >
    xXSmall
  </h1>
</div>
`;

exports[`Storyshots Heading size: xXXSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-ayp41h=""
  >
    xXXSmall
  </h1>
</div>
`;

exports[`Storyshots Heading style override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h2
    data-css-pk5y9y=""
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    pink
  </h2>
</div>
`;

exports[`Storyshots Label caps & strong: true 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-vnpdri=""
  >
    Caps
  </span>
</div>
`;

exports[`Storyshots Label caps: true 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-p621yr=""
  >
    Caps
  </span>
</div>
`;

exports[`Storyshots Label className override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    className="css-mbiza7"
    data-css-8pzzex=""
  >
    blue
  </span>
</div>
`;

exports[`Storyshots Label color: primary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-8pzzex=""
  >
    Primary
  </span>
</div>
`;

exports[`Storyshots Label color: secondary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-1ftdeqk=""
  >
    Secondary
  </span>
</div>
`;

exports[`Storyshots Label size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-1i3miyx=""
  >
    large
  </span>
</div>
`;

exports[`Storyshots Label size: medium 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-8pzzex=""
  >
    medium
  </span>
</div>
`;

exports[`Storyshots Label size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-10ikwzq=""
  >
    small
  </span>
</div>
`;

exports[`Storyshots Label size: xSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-bnh2te=""
  >
    xSmall
  </span>
</div>
`;

exports[`Storyshots Label strong: true 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-zzr72u=""
  >
    Strong
  </span>
</div>
`;

exports[`Storyshots Label style override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-8pzzex=""
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    pink
  </span>
</div>
`;

exports[`Storyshots List mixed list 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <div>
    <ul
      data-css-1uorkvb=""
    >
      <li>
        aone
      </li>
      <li>
        two
      </li>
      <li>
        <ol
          data-css-n9hbap=""
        >
          <li>
            one
          </li>
          <li>
            two
          </li>
          <li>
            three
          </li>
          <li>
            <ul
              data-css-uyvryv=""
            >
              <li>
                one
              </li>
              <li>
                two
              </li>
              <li>
                three
              </li>
              <li>
                four
              </li>
              <li>
                five
              </li>
            </ul>
          </li>
          <li>
            five
          </li>
        </ol>
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
    <ul
      data-css-uyvryv=""
      style={
        Object {
          "marginTop": 50,
        }
      }
    >
      <li>
        one
      </li>
      <li>
        two
      </li>
      <li>
        <ul
          data-css-1uorkvb=""
        >
          <li>
            one
          </li>
          <li>
            two
          </li>
          <li>
            <ol
              data-css-n9hbap=""
            >
              <li>
                one
              </li>
              <li>
                two
              </li>
              <li>
                three
              </li>
              <li>
                four
              </li>
              <li>
                five
              </li>
            </ol>
          </li>
          <li>
            four
          </li>
          <li>
            five
          </li>
        </ul>
      </li>
      <li>
        four
      </li>
      <li>
        five
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-1dbsx0j=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List size: medium 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-1uorkvb=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-kzz4vk=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List type: bulleted 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-1uorkvb=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List type: default 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-uyvryv=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List type: numbered 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ol
    data-css-n9hbap=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ol>
</div>
`;

exports[`Storyshots P className override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    className="css-mbiza7"
    data-css-gnvid8=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P color: primary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-gnvid8=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P color: secondary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-143nzvh=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-ou26m0=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P size: medium 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-gnvid8=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-ooirvk=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P style override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-gnvid8=""
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;
